feat(search): Implement dynamic global search and price filtering
- Replaced basic repository finders with MongoTemplate dynamic queries in SweetService
- Implemented Global Keyword search that matches against both 'name' and 'category' fields
- Added optional price range filtering (min/max) that works alongside keyword search
- Updated SweetController to expose the new search parameters
- Added extensive unit tests in SweetServiceTest using ArgumentCaptor to verify dynamic query construction

Used Gemini to generate the dynamic MongoTemplate logic and the Mockito test scenarios.

Co-authored-by: Gemini <noreply@google.com>